Generate mouse/key events from polling in she module instead of ui module

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -2,8 +2,12 @@
 # Copyright (C) 2012-2014  David Capello
 
 set(SHE_SOURCES
+  alleg4/clock.cpp
+  alleg4/close_button.cpp
   alleg4/fontbmp.cpp
-  alleg4/she_alleg4.cpp)
+  alleg4/key_poller.cpp
+  alleg4/mouse_poller.cpp
+  alleg4/she.cpp)
 
 if(APPLE)
   if(NOT USE_SHARED_ALLEGRO4)
