Add fixmath library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -187,6 +187,7 @@ add_subdirectory(base)
 add_subdirectory(css)
 add_subdirectory(doc)
 add_subdirectory(filters)
+add_subdirectory(fixmath)
 add_subdirectory(gen)
 add_subdirectory(gfx)
 add_subdirectory(raster)
