Fix region_tests compilation (as now it depends on pixman library)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -316,7 +316,7 @@ function(find_tests dir dependencies)
 endfunction()
 
 find_tests(base base-lib ${sys_libs})
-find_tests(gfx gfx-lib base-lib ${sys_libs})
+find_tests(gfx gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(raster raster-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(doc doc-lib raster-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(css css-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
