--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/aseprite/pixman.git
 [submodule "third_party/simpleini"]
 	path = third_party/simpleini
-	url = git@github.com:aseprite/simpleini.git
+	url = https://github.com/aseprite/simpleini.git
