--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,7 @@ if(UNIX AND NOT APPLE AND NOT BEOS)
   endif()
   include_directories(SYSTEM ${X11_INCLUDE_DIR})
   list(APPEND PLATFORM_LIBS ${X11_LIBRARIES})
+  set(LINK_LIBRARIES -lX11)
 
   if(X11_XShm_FOUND)
     list(APPEND PLATFORM_LIBS ${X11_Xext_LIB})
