Fix underlinking with USE_SHARED_ALLEGRO4=ON

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,6 +58,7 @@ if(USE_SHARED_ALLEGRO4)
     OUTPUT_VARIABLE LIBALLEGRO4_LINK_FLAGS
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
+  set(LIBALLEGRO4_LINK_FLAGS ${LIBALLEGRO4_LINK_FLAGS} ${PLATFORM_LIBS})
   include_directories(${LIBALLEGRO4_INCLUDE_DIR})
 else()
   add_definitions(-DALLEGRO4_WITH_RESIZE_PATCH)
