Add gfx::PackingRects class for packing multiple rectangles in a texture

--- a/src/gfx/CMakeLists.txt
+++ b/src/gfx/CMakeLists.txt
@@ -1,8 +1,9 @@
-# ASEPRITE
+# Aseprite
 # Copyright (C) 2001-2014  David Capello
 
 add_library(gfx-lib
   hsv.cpp
+  packing_rects.cpp
   region.cpp
   rgb.cpp
   transformation.cpp)
