Add SetLoopSection command and F2 keyboard shortcut (close #491)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -79,6 +79,7 @@ add_library(app-lib
   commands/cmd_save_mask.cpp
   commands/cmd_save_palette.cpp
   commands/cmd_scroll.cpp
+  commands/cmd_set_loop_section.cpp
   commands/cmd_set_palette.cpp
   commands/cmd_sprite_editor.cpp
   commands/cmd_sprite_properties.cpp
