Fix compilation of gen utility (and tests) under Visual Studio solution (fix #541)

--- a/src/gen/CMakeLists.txt
+++ b/src/gen/CMakeLists.txt
@@ -5,6 +5,12 @@ add_executable(gen
   gen.cpp
   ui_class.cpp)
 
+if(MSVC)
+  # Fix problem compiling gen from a Visual Studio solution
+  set_target_properties(gen
+    PROPERTIES LINK_FLAGS -ENTRY:"mainCRTStartup")
+endif()
+
 target_link_libraries(gen base-lib)
 if(USE_SHARED_TINYXML)
   target_link_libraries(gen ${LIBTINYXML_LIBRARY})
