--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,11 +28,7 @@ set(aseprite_libraries app-lib css-lib doc-lib raster-lib
 # Directories where .h files can be found
 include_directories(. .. ../third_party)
 
-# Directory where generated files by "gen" utility will stay.
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
 # Third-party libraries
-
 if(USE_SHARED_ALLEGRO4)
   # Find the shared Allegro 4 library
   find_library(LIBALLEGRO4_LIBRARY alleg)
@@ -246,29 +242,6 @@ if(EXISTS ../docs/quickref.pdf)
 endif()
 
 ######################################################################
-# Generate source files from widget XML files
-
-file(GLOB widget_files ${CMAKE_SOURCE_DIR}/data/widgets/*.xml)
-foreach(widget_file ${widget_files})
-  get_filename_component(widget_name ${widget_file} NAME_WE)
-  set(target_name generated_${widget_name})
-  set(output_fn ${CMAKE_CURRENT_BINARY_DIR}/generated_${widget_name}.h)
-
-  add_custom_command(
-    OUTPUT ${output_fn}
-    COMMAND gen/gen --input ${widget_file} --widgetid ${widget_name} > ${output_fn}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    MAIN_DEPENDENCY ${widget_file}
-    DEPENDS gen)
-
-  add_custom_target(${target_name} DEPENDS ${output_fn})
-
-  set_source_files_properties(${target_name} PROPERTIES GENERATED TRUE)
-
-  add_dependencies(app-lib ${target_name})
-endforeach()
-
-######################################################################
 # Tests
 
 function(find_tests dir dependencies)
@@ -290,6 +263,13 @@ function(find_tests dir dependencies)
     get_filename_component(testname ${testsourcefile} NAME_WE)
 
     add_executable(${testname} ${testsourcefile})
+
+    if(MSVC)
+      # Fix problem compiling gen from a Visual Studio solution
+      set_target_properties(${testname}
+	PROPERTIES LINK_FLAGS -ENTRY:"mainCRTStartup")
+    endif()
+
     target_link_libraries(${testname} gtest ${ARGV})
     if(LIBALLEGRO4_LINK_FLAGS)
       target_link_libraries(${testname} ${LIBALLEGRO4_LINK_FLAGS})
