Optimize ToolLoop with modified regions of pixels
Here we avoid copying and clearing pixels that will not be used
in the whole tool loop process.
Changes:
* Add several member functions in ToolLoop to validate/invalidate regions
  of source/destination images so we know what regions are safe to use
  by inks and can be shown in the editor
* Add new DocumentObserver::onExposeSpritePixels() member to validate
  pixels that will be displayed in the editor
* Add Ink::needs/createSpecialSourceArea() member functions to validate
  extra areas for inks like blur or jumble
* Add undoers::ModifiedRegion to save the undo information about the
  modified region
* Add ShowHideDrawingCursor class
* Change "blur" tool policy from overlap to accumulate

(This is a real fix for issue #239)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -249,6 +249,7 @@ add_library(app-lib
   undoers/dirty_area.cpp
   undoers/flip_image.cpp
   undoers/image_area.cpp
+  undoers/modified_region.cpp
   undoers/move_layer.cpp
   undoers/open_group.cpp
   undoers/remap_palette.cpp
