--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ set(aseprite_libraries
   render-lib
   scripting-lib
   undo-lib
+  undo2-lib
   filters-lib
   ui-lib
   she
@@ -220,6 +221,7 @@ add_subdirectory(scripting)
 add_subdirectory(she)
 add_subdirectory(ui)
 add_subdirectory(undo)
+add_subdirectory(undo2)
 
 add_subdirectory(app)
 
@@ -328,6 +330,7 @@ function(find_tests dir dependencies)
 endfunction()
 
 find_tests(base base-lib ${sys_libs})
+find_tests(undo2 undo2-lib ${sys_libs})
 find_tests(gfx gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(doc doc-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(render render-lib doc-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
