Rename undo2 to undo library
Now that the old undo library doesn't exist, we can use "undo" namespace
again.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,7 +30,7 @@ set(aseprite_libraries
   doc-lib
   render-lib
   scripting-lib
-  undo2-lib
+  undo-lib
   filters-lib
   ui-lib
   she
@@ -219,7 +219,7 @@ add_subdirectory(gfx)
 add_subdirectory(scripting)
 add_subdirectory(she)
 add_subdirectory(ui)
-add_subdirectory(undo2)
+add_subdirectory(undo)
 
 add_subdirectory(app)
 
@@ -328,7 +328,7 @@ function(find_tests dir dependencies)
 endfunction()
 
 find_tests(base base-lib ${sys_libs})
-find_tests(undo2 undo2-lib ${sys_libs})
+find_tests(undo undo-lib ${sys_libs})
 find_tests(gfx gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(doc doc-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
 find_tests(render render-lib doc-lib gfx-lib base-lib ${libs3rdparty} ${sys_libs})
