--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -31,6 +31,7 @@ set(BASE_SOURCES
   mutex.cpp
   path.cpp
   program_options.cpp
+  replace_string.cpp
   serialization.cpp
   sha1.cpp
   sha1_rfc3174.c
