Add CelData to share image/position/opacity between linked cels
Changes:
- Merged app::cmd::ObjectIO into doc::SubObjectsIO
- Changed app::cmd::SetCelImage with app::cmd::SetCelData
- Added Cel::createCopy/Link() to avoid confunsion with Cel copy ctor
- Renamed Sprite::getImage() -> getImageRef()
- Added Sprite::getDataCelRef()
- Added doc::CelsRange helper to iterate cels
- Added Sprite::cels()/uniqueCels() member functions (removed
  Sprite::getCels())
- Added DocumentRange::convertToCels()

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -75,15 +75,14 @@ add_library(app-lib
   cmd/layer_from_background.cpp
   cmd/move_cel.cpp
   cmd/move_layer.cpp
-  cmd/object_io.cpp
   cmd/remove_cel.cpp
   cmd/remove_frame.cpp
   cmd/remove_layer.cpp
   cmd/remove_palette.cpp
   cmd/replace_image.cpp
   cmd/reselect_mask.cpp
+  cmd/set_cel_data.cpp
   cmd/set_cel_frame.cpp
-  cmd/set_cel_image.cpp
   cmd/set_cel_opacity.cpp
   cmd/set_cel_position.cpp
   cmd/set_frame_duration.cpp
