Replaced app::skin::ThemeColor with app::gen::SkinTheme::Colors
Generate app::gen::SkinFile class from skin.xml to automate creation
of ID references.

--- a/src/gen/CMakeLists.txt
+++ b/src/gen/CMakeLists.txt
@@ -1,9 +1,10 @@
 # Aseprite Code Generator
-# Copyright (C) 2014  David Capello
+# Copyright (C) 2014, 2015  David Capello
 
 add_executable(gen
   gen.cpp
   pref_types.cpp
+  skin_class.cpp
   ui_class.cpp)
 
 if(MSVC)
@@ -18,4 +19,3 @@ if(USE_SHARED_TINYXML)
 else()
   target_link_libraries(gen tinyxml)
 endif()
-
