--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -307,12 +307,14 @@ add_library(app-lib
   ui/keyboard_shortcuts.cpp
   ui/main_menu_bar.cpp
   ui/main_window.cpp
+  ui/news_listbox.cpp
   ui/notifications.cpp
   ui/palette_popup.cpp
   ui/palette_view.cpp
   ui/palettes_listbox.cpp
   ui/popup_window_pin.cpp
   ui/preview_editor.cpp
+  ui/recent_listbox.cpp
   ui/resources_listbox.cpp
   ui/select_accelerator.cpp
   ui/skin/button_icon_impl.cpp
