--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,8 @@ if(MSVC)
     # Add support for Windows XP with 5.01 subsystem
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:X86 /SUBSYSTEM:WINDOWS,5.01")
   endif()
+
+  add_definitions(-D_SCL_SECURE_NO_WARNINGS)
 endif(MSVC)
 
 # Libraries in this directory
